--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Authenticate with Google Cloud
       run: |
-        echo "${{ secrets.GCP_SA_KEY }}" > key.json
+        echo "${{ secrets.GCLOUD_SA_KEY }}" > key.json
         gcloud auth activate-service-account --key-file=key.json
         gcloud config set project rocketman-contact-form
 
