--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,7 @@ on:
     branches:
       - main 
     paths:
-      - 'C:/Users/HARDiK/OneDrive/Work/^_^/rocketman-dupe-backend'
-      - '.github/workflows/deploy.yml'
+      - '^_^/rocketman-dupe-backend/**'
 
 jobs:
   deploy:
